[package]
name = "gpu-id-level"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2018"

[dependencies]
base64 = "0.13"
clap = "3.0.0-beta.2"
ctrlc = "3"
generic-array = "0.14"
grt-core = { version = "1.0.0", package = "geobacter-runtime-core" }
grt-amd  = { version = "1.0.0", package = "geobacter-runtime-amd" }
hex = "0.4"
lexical-core = "0.7"
sha-1 = { version = "0.9.4", features = ["compress", "force-soft"] }
smallvec = "=1.4.1"
tracing-subscriber = "0.2"
tsproto-types = { git = "https://github.com/ReSpeak/tsclientlib", rev = "33678d401eef95f432bc23d02f0ca4d9575caed6" }

[profile.release]
debug = true
debug-assertions = true

[profile.dev]
rpath = true
[profile.test]
rpath = true
[profile.bench]
rpath = true

[patch.crates-io]
amd-comgr-sys = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
amd-comgr = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
hsa-rt-sys = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
hsa-rt = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
geobacter-runtime-core = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
geobacter-runtime-amd-macros = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
geobacter-runtime-amd = { git = "https://github.com/geobacter-rs/geobacter", rev = "ee15a1403f7536f3e306b86c80354d1332717db6" }
alloc-wg = { git = "https://github.com/geobacter-rs/alloc-wg", rev = "501dd301ef4834993c9a807a1b72147fa0e41784" }
